--- a/blog/app/views/articles/index.html.erb
+++ b/blog/app/views/articles/index.html.erb
@@ -8,7 +8,8 @@
 
 <p>
   <%= link_to 'Show', article_path(article) %> |
-  <%= link_to 'Edit', edit_article_path(article) %>
+  <%= link_to 'Edit', edit_article_path(article) %> |
+  <%= link_to 'Delete', destroy_article_path(article) %>
 </p>
 
 <hr />
